--- a/style.css
+++ b/style.css
@@ -718,7 +718,8 @@ header {
 }
 
 .internship-card:hover {
-    box-shadow: 0px -2px 20px 0px rgba(179, 185, 232, 0.534);
+    box-shadow: 5px 5px 10px 5px rgba(102, 102, 155, 0.678);
+    opacity: 0.9;
 }
 
 .internship-card .image-section {
